--- a/LWCLearnings/force-app/main/default/lwc/jsconfig.json
+++ b/LWCLearnings/force-app/main/default/lwc/jsconfig.json
@@ -1,7 +1,14 @@
 {
     "compilerOptions": {
         "baseUrl": ".",
-        "paths": {},
+        "paths": {
+            "c/HelloWorld": [
+                "HelloWorld/HelloWorld.js"
+            ],
+            "c/helloWorld": [
+                "helloWorld/helloWorld.js"
+            ]
+        },
         "experimentalDecorators": true
     },
     "include": [
